# Refl_Old

./: .gitignore  CMakeLists.txt  README.md
Metadata/: CMakeLists.txt
Metadata/Include/: Class.h  Enum.h  Function.h  Metadata.h  MetadataApi.h  MetadataExport.h  Property.h  StaticType.h  Type.h
Metadata/Source/: Enum.cpp  Metadata.cpp  Type.cpp
MetadataGenerator/: CMakeLists.txt
MetadataGenerator/Source/: CodeGenerator.cpp  CodeGenerator.h  GeneratedTemplates.cpp  GeneratedTemplates.h  Helper.cpp  Helper.h  Main.cpp  Parser.h
Refl/: CMakeLists.txt
Refl/Include/: Archive.h  Class.h  Enum.h  Function.h  GCObject.h  Logger.h  Object.h  PlatformAbstract.h  Property.h  Queue.h  Record.h  Refl.h  ReflExport.h  StaticType.h  Type.h
Refl/Source/: Archive.cpp  Class.cpp  Enum.cpp  Function.cpp  GCObject.cpp  Logger.cpp  Object.cpp  PlatformAbstract.cpp  Record.cpp  StaticType.cpp  Type.cpp
ReflGenerator/: CMakeLists.txt
ReflGenerator/Source/: CodeGenerator.cpp  CodeGenerator.h  GeneratedTemplates.cpp  GeneratedTemplates.h  Helper.cpp  Helper.h  Main.cpp  Parser.cpp  Parser.h
Source/: Engine.h
Tests/: CMakeLists.txt  CppVerify.cpp
Tests/Include/: TestsExport.h
Tests/Source/: Engine.cpp  Engine.h  TimerManager.h
Tools/: CMakeLists.txt
Tools/MetaTool/: CMakeLists.txt  TO_STRING(cpp_void);.cpp
Tools/MetaTool/Source/: CodeGenerator.cpp  CodeGenerator.h  GeneratedTemplates.cpp  GeneratedTemplates.h  Helper.cpp  Helper.h  Main.cpp  Parser.cpp
Tools/MetaTool/Template/: GeneratedSource.template  GeneratedTemplates.cpp.template
Tools/Metadata/: CMakeLists.txt
Tools/Metadata/Include/: Class.h  Enum.h  Function.h  MetaValue.h  Metadata.h  Property.h  StaticType.h  Type.h
Tools/Metadata/Source/: Enum.cpp  Metadata.cpp  Type.cpp
